show list of cats

--- a/index.html
+++ b/index.html
@@ -8,20 +8,8 @@
     <script async src="app.js" ></script>
 </head>
 <body>
-    <div id="img-container">
-        <div id="img-1">
-            <div class="header">
-                <h2>Cat One</h2>
-            </div>
-            <img src="assets/images/img_1.jpg" alt="">
-        </div>
-        <div class="" id="img-2">
-            <div class="header">
-                <h2>Cat Two</h2>
-            </div>
-            <img src="assets/images/img_2.jpg" alt="">
-        </div>
+    <ul id="list-container" class="list-container">
         
-    </div>
+    </ul>
 </body>
 </html>
