show detail when an item list is clicked

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <ul id="list-container" class="list-container">
         
     </ul>
+    <div id="detail-container" class="detail-container">
+
+    </div>
 </body>
 </html>
