clicker premium exercise

--- a/catsApp/index.html
+++ b/catsApp/index.html
@@ -8,11 +8,7 @@
     <script async src="app.js" ></script>
 </head>
 <body>
-    <ul id="list-container" class="list-container">
-        
-    </ul>
-    <div id="detail-container" class="detail-container">
-
-    </div>
+    <ul id="list-container" class="list-container"></ul>
+    <div id="detail-container" class="detail-container"></div>
 </body>
 </html>
