Modify model exercise

--- a/catsApp/index.html
+++ b/catsApp/index.html
@@ -10,5 +10,8 @@
 <body>
     <ul id="list-container" class="list-container"></ul>
     <div id="detail-container" class="detail-container"></div>
+    <button id="admin-mode">Admin</button>
+    <div id="admin-container" class="admin-container">
+    </div>
 </body>
 </html>
